[package]
name = "do_soft"
version = "0.1.0"
edition = "2021"

[dependencies]
reqwest = { version = "0.12.5", features = ["cookies", "json"] }
tokio = { version = "1.39.2", features = ["full"] }
serde = { version = "1.0.204", features = ["derive"] }
serde_json = "1.0.120"
cookie = "0.18.1"
dotenv = "0.15.0"
regex = "1.10.5"
rand = "0.9.0-alpha.1"